# ValVault

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
ValVault/: __init__.py  auth.py  database.py  debug.py  entry.py  password.py  settings.py  singleton.py  storage.py  structs.py  terminal.py
test/: mockup.py  test_auth.py  test_db.py  test_entry.py  test_fix_db.py
