[project]
name = "ValVault"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
keywords = ["valorant", "vault", "keepass"]
dependencies = [
    "requests",
    "pykeepass",
    "pyjwt",
    "dataclasses-json",
    "ValLib",
    "ValStorage",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValVault"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: version bump"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
